# containerized_ui_tests

./: README.md  docker-compose.yaml  notes.txt  pyproject.toml
app/: notes.txt  requirements.txt
app/api_tools/: api_calls.py  api_data.py
app/pages/: base_page.py  external_pages.py  home_page.py
app/pages/page_resources/: resources.py
app/selenium_tools/: base_selenium_calls.py
app/tests/: test_test.py
app/tests/api_tests/: api_test.py
app/tests/front_end_tests/: ui_test.py
