[tool.poetry]
name = "gv-test-framework"
version = "0.1.0"
description = "Testing framework for guerillavending.com"
authors = ["MikeGalyen <mkgalyen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
selenium = "^4.22.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
